--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "smproxy-1.0.6.tar.bz2": bbb374ad7e184af7bcada70b90df81f82b9b71ad
+  smproxy-1.0.7.tar.xz: f4ad404b9f04133bf5b44e2e5087666b17cf5b8b
